# template-axum-htmx-tailwind

./: .env.TEMPLATE  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  bun.lockb  package.json  tailwind.config.js
.github/workflows/: ci.yml
assets/scripts/: index.ts
lib/: Cargo.toml
lib/src/: asset_cache.rs  cache_control.rs  config.rs  lib.rs  mime.rs
src/: api_error.rs  asset_cache.rs  config.rs  main.rs  state.rs
src/routes/: index.rs  mod.rs  not_found.rs  robots.rs
templates/: _base.html  _partial.html  about.html  index.html  navbar.html  not_found.html
