[package]
name = "template-axum-htmx-tailwind"
authors = ["Rob Wagner <rob@sombia.com>"]
license = ""
repository = "https://github.com/robertwayne/template-axum-htmx-tailwind"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-compression = { version = "0.4", features = ["brotli"] }
axum = { version = "0.7" }
axum-extra = { version = "0.9", default-features = false, features = [
    "cookie",
    "cookie-private",
] }
axum-htmx = { version = "0.5" }
bytes = "1"
deadpool = { version = "0.11", features = ["rt_tokio_1", "managed"] }
deadpool-postgres = "0.13"
minijinja = { git = "https://github.com/mitsuhiko/minijinja", branch = "main", features = [
    "loader",
] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-postgres = "0.7"
tower = { version = "0.4", default-features = false, features = ["util"] }
tower-http = { version = "0.5", default-features = false, features = [
    "cors",
    "compression-br",
] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
