[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum", branch = "main", default-features = false }
bytes = "1"
futures-core = "0.3"
pin-project-lite = "0.2"
tower = { version = "0.4", default-features = false }
tracing = { version = "0.1", default-features = false }
