[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
async-compression = { version = "0.4", features = ["brotli", "tokio"] }
axum = { git = "https://github.com/tokio-rs/axum", branch = "main", default-features = false }
bytes = "1"
futures-core = "0.3"
pin-project-lite = "0.2"
rustc-hash = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
tower = { version = "0.4", default-features = false }
tracing = { version = "0.1", default-features = false }
